src/test/deca/context/valid/personalTests/cast2.deca
// Test cast variable dans un programme

{
    int a = 5;
    float b = 3.14;
    float c = a + b;
    int d = (int) (c);
}